--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "koa": "^2.15.0",
+    "koa-json": "^2.0.2",
+    "koa-router": "^12.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
