--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "koa": "^2.15.0",
     "koa-json": "^2.0.2",
-    "koa-router": "^12.0.1"
+    "koa-router": "^12.0.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
