--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "koa": "^2.15.0",
+    "koa-body-parser": "^1.1.2",
+    "koa-cors": "^0.0.16",
     "koa-json": "^2.0.2",
     "koa-router": "^12.0.1",
     "mysql": "^2.18.1"
